# cardano-swiss-knife

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  flake.nix  gate.sh  justfile  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  release-please-config.json  spago.yaml  typedoc.json
.github/workflows/: ci.yml  pages.yml  pr-preview.yml  release.yml
.specify/memory/: constitution.md
app/: spago.yaml
app/shims/: path.cjs
app/src/: App.js  App.purs
cli/: csk.mjs  tx-review.mjs  vault-host.mjs
docs/: book-interchange.md  concepts.md  index.md  installation.md  troubleshooting.md
docs/architecture/: release-flow.md  storage.md  system.md
docs/dev/: releasing.md  workflows.md
docs/inspector/: .gitignore  SECURITY.md  package-lock.json  package.json  (+2 more)
haskell/: cardano-addresses-browser-vectors.cabal
haskell/app/: Main.hs
lib/: spago.yaml
nix/: README.md  project.nix  purescript.nix  wasm-ui.nix
release/: capabilities.json  engines.json
scripts/: check-architecture-boundary.sh  check-node-api-exports.mjs  check-node-package.sh  check-offline-capability-inventory.sh  check-release-docs.mjs  check-release-manifests.mjs  check-release-package.mjs  check-release-parity.mjs  check-release-version.mjs  check-release-workflows.mjs
test/: spago.yaml  vault-cli.test.mjs  vault-core.test.mjs  vault-cross-host.test.mjs
test-vectors/: vectors.json
tests/: derivation.spec.ts  inspect.spec.ts  legacy-bootstrap.spec.ts  mnemonic.spec.ts  scripts.spec.ts  signing.spec.ts  transactions.spec.ts  vault.spec.ts
(+371 files in other folders)
